# object_detection

./: README.md
object_detection/: setup.py
object_detection/models/dexterity_openvino_model/: dexterity.xml  metadata.yaml
object_detection/models/pt_to_openvino_conversion/: convert_pt_to_vino.py
object_detection/object_detection/: capture_image.py  yolo_low_resource.py  yolo_real.py  yolo_to_map.py  yolo_to_map_openvino.py  yolo_to_pose.py
object_detection_rviz/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
object_detection_rviz/include/object_detection_rviz/: capture_panel.hpp
object_detection_rviz/src/: capture_panel.cpp
